<resources>
    <string name="Is_download_voice_click_later">下载语音，请稍后再单击</string>
    <string name="Recording_without_permission">您没有权限录制</string>
    <string name="Send_voice_need_sdcard_support">录音需要SD卡支持</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_desc">"提示：

1.若不能使用辅助功能，请重启手机后重试；

2.请勿开启多个辅助功能，否则会干扰本应用运行；

3.应用退出后，该服务会自动关闭，如果再次使用该功能请重新开启该服务；

4.此功能支持android4.4以上的系统，如有疑问请在微商宝贝APP选择联系客服"</string>
    <string name="accessibility_tip">★微商辅助★</string>
    <string name="album">图片</string>
    <string name="all_image">所有图片</string>
    <string name="all_images_video">图片/视频</string>
    <string name="all_videos">所有视频</string>
    <string name="app_name">微商宝贝</string>
    <string name="app_name2">微信微商宝贝</string>
    <string name="app_name_ws">❤️微商宝贝❤️</string>
    <string name="app_name_wtbaby">微商宝贝</string>
    <string name="app_version_desc">发现新的版本，请下载体验</string>
    <string name="app_version_title">发现新版本</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attach_file">File</string>
    <string name="backPage">&lt;</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brvah_app_name">Library</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="camera">拍摄</string>
    <string name="camera_permission_required">本功能需要相机权限！</string>
    <string name="cancel">取消</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_for_update_new">new</string>
    <string name="check_for_updates_version_info">最新 V%1$s</string>
    <string name="choose">选择</string>
    <string name="clean_zombie_dnd_1">"自定义消息
(最高效)"</string>
    <string name="clean_zombie_dnd_2">"朋友圈查死粉
(少打扰)"</string>
    <string name="clean_zombie_dnd_3">"朋友圈查屏蔽
(无打扰)"</string>
    <string name="clean_zombie_dnd_extra_1">温馨提示：输入您要发送的文本消息，同时检测死粉</string>
    <string name="clean_zombie_dnd_extra_2">温馨提示：输入您要发送的文本消息，系统将首先查看朋友圈是否可见，如正常可见则不发送此消息，如被屏蔽则进一步发送该消息确认是否是好友。</string>
    <string name="clean_zombie_dnd_extra_3">"温馨提示：直接从朋友圈检测，不发送消息，绝对无忧，如果能确定是非好友，则标记\"A000非好友_昵称\"，如果无法查看朋友圈，则标记为\"A000被屏蔽_昵称\"

被屏蔽定义：
1.好友的朋友圈对你不可见;
2.好友微信号被封，无法登录的无效微信号"</string>
    <string name="clean_zombie_dnd_extra_4">温馨提示：1.发送收藏列表的第一条，请吧要发的内容收到第一条。2.发送收藏的同时还可以附带一条留言信息，同时检测死粉</string>
    <string name="comfirm_collection">"启动微信后，先手动点击 弹框中的 收藏  按钮，再点开始按钮，将自动转发"</string>
    <string name="confirm">确认</string>
    <string name="contact_album">个人相册</string>
    <string name="delect_nick_1">"删除那些昵称带有
“AOOO非好友”的好友"</string>
    <string name="delect_nick_2">"删除那些昵称带有
“AOOO被屏蔽”的好友"</string>
    <string name="dialog_account">账号</string>
    <string name="dialog_account_exists">已存在,无需重复注册</string>
    <string name="dialog_account_log">账号已登录，填写新密码方便下次登录</string>
    <string name="dialog_back">返回</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_change_cover">朋友的评论</string>
    <string name="dialog_continue_fill_in">继续填写</string>
    <string name="dialog_enable_accessibility_msg">Enable my Accessibility Service in order to get current activity info on Android 5.0+</string>
    <string name="dialog_enable_accessibility_positive_btn">Enable It</string>
    <string name="dialog_enable_overlay_window_msg">Allow permission to show window over other apps on Android 7.1.1+</string>
    <string name="dialog_enable_overlay_window_positive_btn">settings</string>
    <string name="dialog_forgot_pwd">忘记密码？</string>
    <string name="dialog_go_login">马上登录</string>
    <string name="dialog_incorrect">账号或登录密码错误，请重新输入.</string>
    <string name="dialog_log_out">退出登录</string>
    <string name="dialog_log_out_msg">退出后不会删除任何历史数据，下次登录依然可以使用本账号。</string>
    <string name="dialog_msg_delay">短信可能有延误，请再等一会</string>
    <string name="dialog_nil_network">网络通信出现问题，请稍后再试.</string>
    <string name="dialog_number_illegal">请选择正确的地区，并输入正确的手机号码</string>
    <string name="dialog_ok">好的</string>
    <string name="dialog_register_acct">注册账号</string>
    <string name="dialog_register_pro">账号不存在，请重新输入或注册新账号</string>
    <string name="dialog_registered">已注册成功，填写个人资料让您的朋友更好的认识你</string>
    <string name="dialog_sign_up">进入APP</string>
    <string name="dialog_try_again">重新输入</string>
    <string name="disclaimer_str">"在使用微商宝贝的所有功能之前、请您务必仔细阅读并透彻理解本声明。

您可以选择不使用微商宝贝，但如果您使用微商宝贝，您的使用行为将被视为对本声明全部内容的认可。

鉴于微商宝贝使用非人工检索/分析方式，无法确定您输入的条件进行是否合法、所以微商宝贝对检索/分析出的结果不承担责任。

如果因以微商宝贝的检索/分析结果作为任何商业行为或者学术研究的依据而产生不良后集，微商宝贝不承担任何法律责任。关于版权:

一、网站或个人使用时不得进行商业性的原版原式的转载，也不得歪曲和篡改本系统所发布的内容。

二、被微商宝贝授权使用的用户、 不应起超越授权范围。

三、如因内容、版权和其它问题需要同本系统联系的，请在问题反馈出提交。关于解释权:

所有用户请合理合法使用微商宝贝，因用户不合理的操作造成的后果由用户自己承担，微商宝贝开发开发商不承担任何责任和损失。
"</string>
    <string name="done">完成</string>
    <string name="done_num">完成(%1$d/%2$d)</string>
    <string name="fgh_mask_bottom">Scroll to move handle</string>
    <string name="fgh_mask_top_pull">Pull To Break Out!</string>
    <string name="fgh_mask_top_release">Release To Break Out!</string>
    <string name="fgh_text_game_over">Game Over</string>
    <string name="fgh_text_loading">Refreshing…</string>
    <string name="fgh_text_loading_failed">Refreshing Failed</string>
    <string name="fgh_text_loading_finish">Refreshing Finished</string>
    <string name="friend_label_1">"群发所有好友
(发通讯录好友)"</string>
    <string name="friend_label_2">"群发部分好友
(只发送选中标签)"</string>
    <string name="friend_label_3">"屏蔽部分好友
(不发送屏蔽标签)"</string>
    <string name="friend_label_4">"拉所有好友
(拉通讯录好友)"</string>
    <string name="friend_label_5">"拉部分好友
(只拉选中标签)"</string>
    <string name="friend_label_6">"屏蔽部分好友
(不拉屏蔽标签)"</string>
    <string name="friend_label_7">点赞/评论所有好友</string>
    <string name="friend_label_8">点赞/评论部分好友</string>
    <string name="friend_label_9">屏蔽部分好友</string>
    <string name="gallery_all_image">所有图片</string>
    <string name="gallery_all_video">所有视频</string>
    <string name="gallery_default_media_empty_tips">空空如也</string>
    <string name="gallery_default_request_storage_access_permission_tips">App请求读取你的相册</string>
    <string name="gallery_default_request_storage_write_permission_tips">App请求写入你的相册</string>
    <string name="gallery_device_camera_unable">相机不可用</string>
    <string name="gallery_device_no_camera_tips">该设备无摄像头</string>
    <string name="gallery_edit_phote">裁剪</string>
    <string name="gallery_image_max_size_tip">你最多只能选择%1$d张照片</string>
    <string name="gallery_loading_view_click_loading_more">加载更多</string>
    <string name="gallery_loading_view_loading">加载中…</string>
    <string name="gallery_loading_view_no_more">没有更多了</string>
    <string name="gallery_media_grid_image_title">图片</string>
    <string name="gallery_media_grid_video_title">视频</string>
    <string name="gallery_over_button_text">完成</string>
    <string name="gallery_over_button_text_checked">完成(%1$d/%2$d)</string>
    <string name="gallery_page_title">%1$d/%2$d</string>
    <string name="gallery_preview_title">预览</string>
    <string name="gallery_take_image">拍摄照片</string>
    <string name="gallery_video">录制视频</string>
    <string name="gif_tag">动图</string>
    <string name="goto_setting">去设置</string>
    <string name="group_label_1">"群发所有群
(只发通讯录群)"</string>
    <string name="group_label_2">"群发部分群
(选中的群发送)"</string>
    <string name="group_label_3">"屏蔽部分群
(选中的群不发送)"</string>
    <string name="hang_up_finsh">松开 结束</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="known">知道了</string>
    <string name="log_in_to_another_account">登录其他账号</string>
    <string name="login_now">马上登录</string>
    <string name="long_click_record">长按 录音</string>
    <string name="message_max_num">"Sorry, you can't add more."</string>
    <string name="move_up_to_cancel">手指上滑 , 取消录音</string>
    <string name="mq_address">地址</string>
    <string name="mq_age">年龄</string>
    <string name="mq_all_image">所有图片</string>
    <string name="mq_allocate_agent">正在分配客服...</string>
    <string name="mq_allocate_agent_tip">正在为您分配客服，请稍后重发</string>
    <string name="mq_allocate_queue_tip">正在排队，请等待客服接入后发送消息</string>
    <string name="mq_allocate_queue_title">排队等待中...</string>
    <string name="mq_already_feedback">已反馈</string>
    <string name="mq_at_least_one_contact">至少填写一种联系方式</string>
    <string name="mq_audio_status_normal">按住说话</string>
    <string name="mq_audio_status_recording">手指上滑，取消发送</string>
    <string name="mq_audio_status_want_cancel">松开手指，取消发送</string>
    <string name="mq_auth_code">验证码</string>
    <string name="mq_back" />
    <string name="mq_blacklist_tips">对不起，当前客服系统暂时无法使用</string>
    <string name="mq_camera_or_storage_no_permission">当前没有相机权限 或者 媒体访问权限</string>
    <string name="mq_cancel">取消</string>
    <string name="mq_choose">选择</string>
    <string name="mq_choose_ticket_category">选择分类</string>
    <string name="mq_comment">备注</string>
    <string name="mq_confirm">确定</string>
    <string name="mq_contact">联系人</string>
    <string name="mq_contains_sensitive_words">！消息包含不规范用语</string>
    <string name="mq_copy_success">复制成功</string>
    <string name="mq_data_is_loading">数据加载中...</string>
    <string name="mq_dialog_select_camera">相机</string>
    <string name="mq_dialog_select_gallery">图库</string>
    <string name="mq_dialog_select_title">请选择图片来源：</string>
    <string name="mq_direct_content">接下来由 %1$s 为你服务</string>
    <string name="picture_empty">你可以使用相机拍摄照片或视频</string>
    <string name="picture_please_select">请选择</string>
    <string name="picture_preview">预览</string>
    <string name="preview">预览</string>
</resources>