<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/id_titleBar" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/picture_title_bar" />
    <RelativeLayout android:id="@id/rl_bottom" android:background="?picture.bottom.bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_alignParentBottom="true">
        <TextView android:enabled="false" android:textSize="14.0sp" android:textColor="?picture.preview.textColor" android:gravity="center|left" android:id="@id/picture_id_preview" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/picture_preview" android:layout_centerVertical="true" />
        <LinearLayout android:enabled="false" android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/id_ll_ok" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true">
            <TextView android:textSize="12.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/picture_tv_img_num" android:background="?picture.num.style" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="0" />
            <TextView android:textSize="14.0sp" android:textColor="?picture.complete.textColor" android:gravity="center|left" android:id="@id/picture_tv_ok" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/picture_please_select" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:gravity="center_vertical" android:id="@id/rl_bottom_new" android:layout_width="fill_parent" android:layout_height="120.0dip" android:layout_alignParentBottom="true">
        <RelativeLayout android:background="#ff2c2f39" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/selected_imgs_layout">
            <TextView android:textSize="12.0sp" android:textColor="@color/select_picture_text_colcr" android:id="@id/tv_select_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="已经选择4个图片或视频" android:layout_centerVertical="true" />
            <Button android:textSize="12.0sp" android:textColor="@color/select_picture_text_colcr" android:id="@id/bt_make" android:background="@color/gray" android:padding="1.0dip" android:layout_width="68.0dip" android:layout_height="wrap_content" android:text="制作" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <LinearLayout android:id="@id/selected_imgs_layout" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="80.0dip" android:layout_alignParentBottom="true">
            <android.support.v7.widget.RecyclerView android:id="@id/recycler" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:overScrollMode="never" />
        </LinearLayout>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView android:id="@id/picture_recycler" android:background="@color/black" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/rl_bottom_new" android:layout_below="@id/id_titleBar" android:overScrollMode="never" />
    <TextView android:textSize="18.0sp" android:textColor="@color/tab_color_false" android:gravity="center" android:id="@id/tv_empty" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/picture_empty" android:layout_centerInParent="true" android:lineSpacingExtra="3.0dip" />
</RelativeLayout>